# rust_knot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: identify_knot.rs
rust-knot-cli/: SKILL.md
rust-knot-cli/references/: commands.md  troubleshooting.md
rust-knot-cli/scripts/: smoke_cli.sh
src/: alexander_table.rs  batch.rs  error.rs  geometry.rs  hull.rs  io.rs  kmt.rs  knotsize.rs  knottype.rs  lib.rs  main.rs  point.rs  polynomial.rs  python_module.rs
tests/: cli_integration.rs  integration.rs
tests/fixtures/: knot_10_100.xyz
